<resources>
    <string name="app_name">WiFi-Sitter</string>
    <string name="ip_address_label">IP address:</string>
    <string name="ip_address_txt_field">IP address (192.168.100.1)</string>
    <string name="port_label">Port:</string>
    <string name="port_txt_field">8000</string>
    <string name="sample_rate_label">Sample rate:</string>


    <string name="menu_label">Menu</string>

    <string-array name="spinner_sample_rates">
        <item>44100 (Default)</item>
        <item>11025</item>
        <item>12000</item>
        <item>22050</item>
        <item>24000</item>
        <item>48000</item>
    </string-array>
    <string name="monoStereo_label">Mono/Stereo</string>
    <string-array name="spinner_monoStereo">
        <item>Stereo (Default)</item>
        <item>Mono</item>
    </string-array>
    <string name="playButton">Play</string>
    <string name="playButtonActive">Playing</string>
    <string name="stopButton">Stop</string>

    <string name="title_activity_start__fullscreen">WiFi-Sitter App</string>
    <string name="image_description">App logo</string>

    <string name="txtMenu">MENU</string>
    <string name="btnMenuListen" >Listen baby</string>
    <string name="btnMenuClientSettings" >Client settings</string>
    <string name="btnMenuServerSettings" >Server settings</string>
    <string name="btnMenuAbout" >About App</string>
    <string name="btnLoadSettings">Load settings</string>
    <string name="btnSaveSettings">Save settings</string>

    <string name="txtListenVolume" >Mobile volume:</string>
    <string name="txtListenSourceVolume">Source loudness:</string>

</resources>
