<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.casek.babysitter.activities.SettingsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_address_label"
            android:id="@+id/txtIpLabel"
            android:inputType="none"

            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ip_address_txt_field"
            android:id="@+id/txtIpAddress"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port_label"
                android:id="@+id/txtPortLabel"
                android:inputType="none"

                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/port_txt_field"
                android:id="@+id/txtPort"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_rate_label"
                android:id="@+id/txtSampleRateLabel"
                android:inputType="none"

                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                />

            <Spinner
                android:id="@+id/spinnerSampleRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_sample_rates"
                >

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monoStereo_label"
                android:id="@+id/txtMonoStereoLabel"
                android:inputType="none"

                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                />

            <Spinner
                android:id="@+id/spinnerMonoStereo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_monoStereo"
                >

            </Spinner>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playButton"
            android:background="@color/colorAccent"
            android:drawableRight="@mipmap/ic_launcher_round"
            android:id="@+id/btnPlay"
            />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
