<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.casek.babysitter.activities.ListenActivity">

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtListenVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtListenVolume"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/txtListenVolumeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="50 %"
            android:textSize="26sp" />

        <ProgressBar
            android:id="@+id/progressBarVolume"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:maxHeight="20dp"
            android:minHeight="10dp"
            android:progress="50"
            android:progressBackgroundTint="@color/colorPrimaryDark"
            android:progressTint="@color/colorPrimary"
            android:scaleY="3" />

        <TextView
            android:id="@+id/txtLoudnessOfSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/txtListenSourceVolume"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/txtLoudnessOfSourceValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="44 dB"
            android:textSize="26sp" />

        <Button
            android:id="@+id/btnPlaySound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playButton"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="521dp"
            android:textColor="@color/white_frame"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btnStopSound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stopButton"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="345dp"
            android:textColor="@color/white_frame"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

